scala_library(
    platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        "3rdparty/jvm/com/twittelonr/storelonhaus:algelonbra",
        "3rdparty/jvm/com/twittelonr/storelonhaus:corelon",
        "3rdparty/src/jvm/com/twittelonr/storelonhaus:algelonbra",
        "3rdparty/src/jvm/com/twittelonr/storelonhaus:corelon",
        "graphstorelon/common:flock_follows-java",
        "snowflakelon:id",
        "src/java/com/twittelonr/ml/api/constant",
        "src/java/com/twittelonr/sbf/graph",
        "src/scala/com/twittelonr/ml/api:api-baselon",
        "src/scala/com/twittelonr/pluck/sourcelon/corelon_workflows/uselonr_modelonl:condelonnselond_uselonr_statelon-scala",
        "src/scala/com/twittelonr/scalding_intelonrnal/dalv2",
        "src/scala/com/twittelonr/scalding_intelonrnal/job",
        "src/scala/com/twittelonr/scalding_intelonrnal/job/analytics_batch",
        "src/scala/com/twittelonr/scalding_intelonrnal/sourcelon",
        "src/scala/com/twittelonr/scalding_intelonrnal/sourcelon/lzo_scroogelon",
        "src/scala/com/twittelonr/simclustelonrs_v2/candidatelon_sourcelon",
        "src/scala/com/twittelonr/simclustelonrs_v2/hdfs_sourcelons",
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding",
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding/common",
        "src/scala/com/twittelonr/simclustelonrs_v2/summingbird/common",
        "src/scala/com/twittelonr/timelonlinelons/prelondiction/felonaturelons/common",
        "src/scala/com/twittelonr/timelonlinelons/prelondiction/felonaturelons/itl",
        "src/scala/com/twittelonr/timelonlinelons/prelondiction/felonaturelons/reloncap",
        "src/scala/com/twittelonr/wtf/scalding/jobs/common:elonxeloncution_app",
        "src/thrift/com/twittelonr/helonrmit/candidatelon:helonrmit-candidatelon-scala",
        "src/thrift/com/twittelonr/wtf/scalding/sims:sims-thrift-scala",
        "twadoop_config/configuration/log_catelongorielons/group/timelonlinelon:timelonlinelon_selonrvicelon_favoritelons-scala",
        "uselonrsourcelon/snapshot/src/main/scala/com/twittelonr/uselonrsourcelon/snapshot/flat:uselonrsourcelon_flat-scala",
        "uselonrsourcelon/snapshot/src/main/thrift/com/twittelonr/uselonrsourcelon/snapshot/flat:flat-scala",
    ],
)

hadoop_binary(
    namelon = "simclustelonrs_offlinelon_job-adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.offlinelon_job.SimClustelonrsOfflinelonJobAdhocApp",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":offlinelon_job",
    ],
)

hadoop_binary(
    namelon = "simclustelonrs_offlinelon_job",
    main = "com.twittelonr.simclustelonrs_v2.scalding.offlinelon_job.SimClustelonrsOfflinelonJobSchelondulelondApp",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":offlinelon_job",
    ],
)

hadoop_binary(
    namelon = "simclustelonrs_offlinelon_job-relonpl",
    main = "com.twittelonr.scalding_intelonrnal.relonpl.TwittelonrScaldingShelonll",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":offlinelon_job",
        "scielonncelon/scalding/scripts:scalding-relonpl-delonps",
    ],
)

hadoop_binary(
    namelon = "dump_clustelonr_topk_job-adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.offlinelon_job.DumpClustelonrTopKTwelonelontsAdhoc",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":offlinelon_job",
    ],
)

# Gelonnelonratelond with `capelonsospy-v2 crelonatelon_targelont offlinelon_twelonelont_job src/scala/com/twittelonr/simclustelonrs_v2/capelonsos_config/atla_proc3.yaml`, config hash bb0831.
scalding_job(
    namelon = "offlinelon_twelonelont_job",
    main = "com.twittelonr.simclustelonrs_v2.scalding.offlinelon_job.SimClustelonrsOfflinelonJobSchelondulelondApp",
    config = [
        ("hadoop.combinelon-input", "truelon"),
        ("hadoop.map.jvm.total-melonmory", "3072m"),
        ("hadoop.quelonuelon", "cassowary.delonfault"),
        ("hadoop.relonducelon.jvm.total-melonmory", "3072m"),
        ("hadoop.submittelonr.jvm.total-melonmory", "5120m"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
    ],
    contact = "no-relonply@twittelonr.com",
    cron = "14 * * * *",
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":offlinelon_job",
    ],
)
