scala_library(
    sourcelons = [
        "*.scala",
    ],
    platform = "java8",
    tags = ["bazelonl-only"],
    delonpelonndelonncielons = [
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding",
        "twelonelontsourcelon/public_twelonelonts/src/main/scala/com/twittelonr/twelonelontsourcelon/public_twelonelonts:public_twelonelonts-scala",
        "uselonrsourcelon/snapshot/src/main/scala/com/twittelonr/uselonrsourcelon/snapshot/flat:uselonrsourcelon_flat-scala",
    ],
)

hadoop_binary(
    namelon = "offlinelon_clustelonr_top_melondia_twelonelonts_20M_145K_2020-adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.offlinelon_twelonelonts.AdhocClustelonrTopTwelonelontsJob",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":offlinelon_twelonelonts",
    ],
)
