scawa_wibwawy(
    souwces = [
        "*.scawa", (⑅˘꒳˘)
    ],
    pwatfowm = "java8",
    t-tags = ["bazew-onwy"], ( ͡o ω ͡o )
    dependencies = [
        "swc/scawa/com/twittew/simcwustews_v2/scawding", UwU
        "tweetsouwce/pubwic_tweets/swc/main/scawa/com/twittew/tweetsouwce/pubwic_tweets:pubwic_tweets-scawa", rawr x3
        "usewsouwce/snapshot/swc/main/scawa/com/twittew/usewsouwce/snapshot/fwat:usewsouwce_fwat-scawa", rawr
    ],
)

h-hadoop_binawy(
    n-nyame = "offwine_cwustew_top_media_tweets_20m_145k_2020-adhoc", σωσ
    m-main = "com.twittew.simcwustews_v2.scawding.offwine_tweets.adhoccwustewtoptweetsjob", σωσ
    p-pwatfowm = "java8", >_<
    w-wuntime_pwatfowm = "java8", :3
    t-tags = [
        "bazew-compatibwe", (U ﹏ U)
        "bazew-compatibwe:migwated", -.-
        "bazew-onwy", (ˆ ﻌ ˆ)♡
    ],
    d-dependencies = [
        ":offwine_tweets", (⑅˘꒳˘)
    ], (U ᵕ U❁)
)
