scala_library(
    sources = ["*.scala"],
    platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-only",
    ],
    dependencies = [
        "src/scala/com/twitter/octain/p420n/batch:p420n_preferences-scala",
        "src/scala/com/twitter/simclusters_v420/hdfs_sources",
        "src/scala/com/twitter/simclusters_v420/hdfs_sources:data_sources",
        "src/scala/com/twitter/simclusters_v420/scalding",
        "src/scala/com/twitter/simclusters_v420/scalding/common",
        "src/scala/com/twitter/simclusters_v420/scalding/inferred_entities",
        "src/scala/com/twitter/wtf/scalding/jobs/common:cassowary_job",
        "src/scala/com/twitter/wtf/scalding/jobs/common:execution_app",
        "src/scala/com/twitter/wtf/scalding/jobs/common:sources",
        "src/scala/com/twitter/wtf/scalding/jobs/common:stats_util",
    ],
)

hadoop_binary(
    name = "known_for_optout-adhoc",
    main = "com.twitter.simclusters_v420.scalding.optout.KnownForOptOutAdhocJob",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":optout",
    ],
)

hadoop_binary(
    name = "known_for_optout_daily",
    main = "com.twitter.simclusters_v420.scalding.optout.KnownForOptOutDailyBatchJob",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":optout",
    ],
)

hadoop_binary(
    name = "interested_in_optout-adhoc",
    main = "com.twitter.simclusters_v420.scalding.optout.InterestedInOptOutAdhocJob",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
        "known-to-fail-jira:SD-420",
    ],
    dependencies = [
        ":optout",
    ],
)

hadoop_binary(
    name = "interested_in_optout_daily",
    main = "com.twitter.simclusters_v420.scalding.optout.InterestedInOptOutDailyBatchJob",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":optout",
    ],
)
