scala_library(
    sourcelons = ["*.scala"],
    platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        "src/scala/com/twittelonr/octain/p13n/batch:p13n_prelonfelonrelonncelons-scala",
        "src/scala/com/twittelonr/simclustelonrs_v2/hdfs_sourcelons",
        "src/scala/com/twittelonr/simclustelonrs_v2/hdfs_sourcelons:data_sourcelons",
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding",
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding/common",
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding/infelonrrelond_elonntitielons",
        "src/scala/com/twittelonr/wtf/scalding/jobs/common:cassowary_job",
        "src/scala/com/twittelonr/wtf/scalding/jobs/common:elonxeloncution_app",
        "src/scala/com/twittelonr/wtf/scalding/jobs/common:sourcelons",
        "src/scala/com/twittelonr/wtf/scalding/jobs/common:stats_util",
    ],
)

hadoop_binary(
    namelon = "known_for_optout-adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.optout.KnownForOptOutAdhocJob",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":optout",
    ],
)

hadoop_binary(
    namelon = "known_for_optout_daily",
    main = "com.twittelonr.simclustelonrs_v2.scalding.optout.KnownForOptOutDailyBatchJob",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":optout",
    ],
)

hadoop_binary(
    namelon = "intelonrelonstelond_in_optout-adhoc",
    main = "com.twittelonr.simclustelonrs_v2.scalding.optout.IntelonrelonstelondInOptOutAdhocJob",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
        "known-to-fail-jira:SD-14439",
    ],
    delonpelonndelonncielons = [
        ":optout",
    ],
)

hadoop_binary(
    namelon = "intelonrelonstelond_in_optout_daily",
    main = "com.twittelonr.simclustelonrs_v2.scalding.optout.IntelonrelonstelondInOptOutDailyBatchJob",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":optout",
    ],
)
