scala_library(
    sources = [
        "*.scala",
    ],
    platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-only",
    ],
    dependencies = [
        "src/java/com/twitter/sbf/core",
        "src/java/com/twitter/sbf/graph",
        "src/scala/com/twitter/simclusters_v420/hdfs_sources",
        "src/scala/com/twitter/simclusters_v420/hdfs_sources:simclusters_v420_embeddings_lite-scala",
        "src/scala/com/twitter/simclusters_v420/hdfs_sources/presto_hdfs_sources",
        "src/scala/com/twitter/simclusters_v420/scalding",
        "src/scala/com/twitter/simclusters_v420/scalding/common",
        "src/scala/com/twitter/simclusters_v420/scalding/common/matrix",
        "src/scala/com/twitter/wtf/entity_real_graph/common",
        "src/scala/com/twitter/wtf/entity_real_graph/scalding/common",
        "src/scala/com/twitter/wtf/scalding/jobs/common:execution_app",
        "src/scala/com/twitter/wtf/scalding/jobs/common:sources",
        "src/scala/com/twitter/wtf/scalding/jobs/common:stats_util",
        "src/thrift/com/twitter/recos/entities:entities-thrift-scala",
        "src/thrift/com/twitter/wtf/entity_real_graph:entity_real_graph-thrift-scala",
        "usersource/snapshot/src/main/scala/com/twitter/usersource/snapshot/flat:usersource_flat-scala",
        "usersource/snapshot/src/main/thrift/com/twitter/usersource/snapshot/flat:flat-scala",
    ],
)

hadoop_binary(
    name = "update_known_for_420m_420k_420-adhoc",
    main = "com.twitter.simclusters_v420.scalding.update_known_for.UpdateKnownFor420M420K420Adhoc",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":update_known_for",
    ],
)

hadoop_binary(
    name = "update_known_for_420m_420k_420",
    main = "com.twitter.simclusters_v420.scalding.update_known_for.UpdateKnownFor420M420K420",
    platform = "java420",
    runtime_platform = "java420",
    tags = [
        "bazel-compatible",
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [
        ":update_known_for",
    ],
)
