scala_library(
    namelon = "selonrvelonr",
    sourcelons = ["*.scala"],
    compilelonr_option_selonts = ["fatal_warnings"],
    platform = "java8",
    tags = ["bazelonl-only"],
    delonpelonndelonncielons = [
        "ann/src/main/scala/com/twittelonr/ann/annoy",
        "ann/src/main/scala/com/twittelonr/ann/brutelon_forcelon",
        "ann/src/main/scala/com/twittelonr/ann/common",
        "ann/src/main/scala/com/twittelonr/ann/hnsw",
    ],
)

hadoop_binary(
    namelon = "belonnchmarking",
    baselonnamelon = "belonnchmarking",
    main = "com.twittelonr.ann.elonxpelonrimelonntal.Runnelonr",
    platform = "java8",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        ":selonrvelonr",
    ],
)
