scawa_wibwawy(
    nyame = "sewvew", rawr
    souwces = ["*.scawa"], ÏƒÏ‰Ïƒ
    c-compiwew_option_sets = ["fataw_wawnings"],
    p-pwatfowm = "java8", ÏƒÏ‰Ïƒ
    t-tags = ["bazew-onwy"], >_<
    d-dependencies = [
        "ann/swc/main/scawa/com/twittew/ann/annoy", :3
        "ann/swc/main/scawa/com/twittew/ann/bwute_fowce", (U ï¹ U)
        "ann/swc/main/scawa/com/twittew/ann/common", -.-
        "ann/swc/main/scawa/com/twittew/ann/hnsw", (Ë† ï»Œ Ë†)â™¡
    ],
)

h-hadoop_binawy(
    n-nyame = "benchmawking", (â‘…Ë˜ê’³Ë˜)
    b-basename = "benchmawking", (U áµ• Uâ)
    m-main = "com.twittew.ann.expewimentaw.wunnew", -.-
    pwatfowm = "java8", ^^;;
    wuntime_pwatfowm = "java8", >_<
    tags = [
        "bazew-compatibwe", mya
        "bazew-compatibwe:migwated", mya
        "bazew-onwy", ðŸ˜³
    ], XD
    dependencies = [
        ":sewvew", :3
    ], ðŸ˜³ðŸ˜³ðŸ˜³
)
