scala_library(
    sources = ["*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    strict_deps = True,
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/google/inject:guice",
        "3rdparty/jvm/javax/inject:javax.inject",
        "3rdparty/jvm/net/codingwell:scala-guice",
        "3rdparty/jvm/org/slf4j:slf4j-api",
        "cr-mixer/server/src/main/resources",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer/candidate_generation",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer/controller",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer/featureswitch",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer/logging",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer/module",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer/param",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer/scribe",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer/similarity_engine",
        "cr-mixer/thrift/src/main/thrift:thrift-scala",
        "decider/src/main/scala",
        "finagle/finagle-core/src/main",
        "finagle/finagle-http/src/main/scala",
        "finagle/finagle-thriftmux/src/main/scala",
        "finatra-internal/mtls-http/src/main/scala",
        "finatra-internal/mtls-thriftmux/src/main/scala",
        "finatra/http-core/src/main/java/com/twitter/finatra/http",
        "finatra/inject/inject-app/src/main/scala",
        "finatra/inject/inject-core/src/main/scala",
        "finatra/inject/inject-server/src/main/scala",
        "finatra/inject/inject-utils/src/main/scala",
        "finatra/utils/src/main/java/com/twitter/finatra/annotations",
        "hydra/common/libraries/src/main/scala/com/twitter/hydra/common/model_config",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/controllers",
        "product-mixer/core/src/main/scala/com/twitter/product_mixer/core/module",
        "product-mixer/core/src/main/thrift/com/twitter/product_mixer/core:thrift-scala",
        "relevance-platform/src/main/scala/com/twitter/relevance_platform/common/filters",
        "src/thrift/com/twitter/timelines/render:thrift-scala",
        "thrift-web-forms/src/main/scala/com/twitter/thriftwebforms",
        "thrift-web-forms/src/main/scala/com/twitter/thriftwebforms/view",
        "timelines/src/main/scala/com/twitter/timelines/features/app",
        "twitter-server-internal",
        "twitter-server/server/src/main/scala",
        "util/util-app/src/main/scala",
        "util/util-core:scala",
        "util/util-slf4j-api/src/main/scala",
    ],
)
