scala_library(
    sourcelons = ["*.scala"],
    compilelonr_option_selonts = ["fatal_warnings"],
    strict_delonps = Truelon,
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        "3rdparty/jvm/com/googlelon/injelonct:guicelon",
        "3rdparty/jvm/javax/injelonct:javax.injelonct",
        "3rdparty/jvm/nelont/codingwelonll:scala-guicelon",
        "3rdparty/jvm/org/slf4j:slf4j-api",
        "cr-mixelonr/selonrvelonr/src/main/relonsourcelons",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr/candidatelon_gelonnelonration",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr/controllelonr",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr/felonaturelonswitch",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr/logging",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr/modulelon",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr/param",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr/scribelon",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr/similarity_elonnginelon",
        "cr-mixelonr/thrift/src/main/thrift:thrift-scala",
        "deloncidelonr/src/main/scala",
        "finaglelon/finaglelon-corelon/src/main",
        "finaglelon/finaglelon-http/src/main/scala",
        "finaglelon/finaglelon-thriftmux/src/main/scala",
        "finatra-intelonrnal/mtls-http/src/main/scala",
        "finatra-intelonrnal/mtls-thriftmux/src/main/scala",
        "finatra/http-corelon/src/main/java/com/twittelonr/finatra/http",
        "finatra/injelonct/injelonct-app/src/main/scala",
        "finatra/injelonct/injelonct-corelon/src/main/scala",
        "finatra/injelonct/injelonct-selonrvelonr/src/main/scala",
        "finatra/injelonct/injelonct-utils/src/main/scala",
        "finatra/utils/src/main/java/com/twittelonr/finatra/annotations",
        "hydra/common/librarielons/src/main/scala/com/twittelonr/hydra/common/modelonl_config",
        "product-mixelonr/corelon/src/main/scala/com/twittelonr/product_mixelonr/corelon/controllelonrs",
        "product-mixelonr/corelon/src/main/scala/com/twittelonr/product_mixelonr/corelon/modulelon",
        "product-mixelonr/corelon/src/main/thrift/com/twittelonr/product_mixelonr/corelon:thrift-scala",
        "relonlelonvancelon-platform/src/main/scala/com/twittelonr/relonlelonvancelon_platform/common/filtelonrs",
        "src/thrift/com/twittelonr/timelonlinelons/relonndelonr:thrift-scala",
        "thrift-welonb-forms/src/main/scala/com/twittelonr/thriftwelonbforms",
        "thrift-welonb-forms/src/main/scala/com/twittelonr/thriftwelonbforms/vielonw",
        "timelonlinelons/src/main/scala/com/twittelonr/timelonlinelons/felonaturelons/app",
        "twittelonr-selonrvelonr-intelonrnal",
        "twittelonr-selonrvelonr/selonrvelonr/src/main/scala",
        "util/util-app/src/main/scala",
        "util/util-corelon:scala",
        "util/util-slf4j-api/src/main/scala",
    ],
)
