scala_library(
    sources = ["**/*.scala"],
    platform = "java8",
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/com/google/inject:guice",
        "3rdparty/jvm/com/twitter/storehaus:core",
        "3rdparty/jvm/javax/inject:javax.inject",
        "3rdparty/jvm/net/codingwell:scala-guice",
        "3rdparty/jvm/org/lz4:lz4-java",
        "3rdparty/jvm/org/slf4j:slf4j-api",
        "discovery-common/src/main/scala/com/twitter/discovery/common/stats",
        "finagle/finagle-http/src/main/scala",
        "finatra-internal/decider/src/main/scala",
        "finatra-internal/mtls-thriftmux/src/main/scala",
        "finatra/inject/inject-app/src/main/scala",
        "finatra/inject/inject-core/src/main/scala",
        "finatra/inject/inject-server/src/main/scala",
        "finatra/inject/inject-thrift-client/src/main/scala",
        "finatra/inject/inject-utils/src/main/scala",
        "finatra/thrift/src/main/scala/com/twitter/finatra/thrift",
        "finatra/thrift/src/main/scala/com/twitter/finatra/thrift:controller",
        "finatra/thrift/src/main/scala/com/twitter/finatra/thrift/filters",
        "finatra/thrift/src/main/scala/com/twitter/finatra/thrift/routing",
        "graph-feature-service/src/main/resources",
        "graph-feature-service/src/main/scala/com/twitter/graph_feature_service/common",
        "graph-feature-service/src/main/scala/com/twitter/graph_feature_service/util",
        "graph-feature-service/src/main/thrift/com/twitter/graph_feature_service:graph_feature_service_thrift-scala",
        "hermit/hermit-core/src/main/scala/com/twitter/hermit/store/common",
        "servo/request/src/main/scala",
        "src/scala/com/twitter/storehaus_internal/memcache",
        "util/util-app/src/main/scala",
        "util/util-slf4j-api/src/main/scala",
    ],
)
