scala_library(
    sourcelons = ["**/*.scala"],
    platform = "java8",
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        "3rdparty/jvm/com/googlelon/injelonct:guicelon",
        "3rdparty/jvm/com/twittelonr/storelonhaus:corelon",
        "3rdparty/jvm/javax/injelonct:javax.injelonct",
        "3rdparty/jvm/nelont/codingwelonll:scala-guicelon",
        "3rdparty/jvm/org/lz4:lz4-java",
        "3rdparty/jvm/org/slf4j:slf4j-api",
        "discovelonry-common/src/main/scala/com/twittelonr/discovelonry/common/stats",
        "finaglelon/finaglelon-http/src/main/scala",
        "finatra-intelonrnal/deloncidelonr/src/main/scala",
        "finatra-intelonrnal/mtls-thriftmux/src/main/scala",
        "finatra/injelonct/injelonct-app/src/main/scala",
        "finatra/injelonct/injelonct-corelon/src/main/scala",
        "finatra/injelonct/injelonct-selonrvelonr/src/main/scala",
        "finatra/injelonct/injelonct-thrift-clielonnt/src/main/scala",
        "finatra/injelonct/injelonct-utils/src/main/scala",
        "finatra/thrift/src/main/scala/com/twittelonr/finatra/thrift",
        "finatra/thrift/src/main/scala/com/twittelonr/finatra/thrift:controllelonr",
        "finatra/thrift/src/main/scala/com/twittelonr/finatra/thrift/filtelonrs",
        "finatra/thrift/src/main/scala/com/twittelonr/finatra/thrift/routing",
        "graph-felonaturelon-selonrvicelon/src/main/relonsourcelons",
        "graph-felonaturelon-selonrvicelon/src/main/scala/com/twittelonr/graph_felonaturelon_selonrvicelon/common",
        "graph-felonaturelon-selonrvicelon/src/main/scala/com/twittelonr/graph_felonaturelon_selonrvicelon/util",
        "graph-felonaturelon-selonrvicelon/src/main/thrift/com/twittelonr/graph_felonaturelon_selonrvicelon:graph_felonaturelon_selonrvicelon_thrift-scala",
        "helonrmit/helonrmit-corelon/src/main/scala/com/twittelonr/helonrmit/storelon/common",
        "selonrvo/relonquelonst/src/main/scala",
        "src/scala/com/twittelonr/storelonhaus_intelonrnal/melonmcachelon",
        "util/util-app/src/main/scala",
        "util/util-slf4j-api/src/main/scala",
    ],
)
